(hotfix) layout issue tweaking

--- a/app/assets/stylesheets/dit-styleguide-augment/components/_filters.scss
+++ b/app/assets/stylesheets/dit-styleguide-augment/components/_filters.scss
@@ -50,16 +50,10 @@
     margin-bottom: 10px;
     @media #{$desktop-s} {
       float: left;
-      width: 32%;
+      width: 33%;
       padding: 0px 20px;
       margin-bottom: 0px;
       min-height: 100px;
-      &__last {
-        width: 36%;
-        &:after {
-          content: none;
-        }
-      }
     }
     @media #{$desktop-s} {
       &:after {
@@ -80,6 +74,9 @@
       }
     }
     &__last {
+      &:after {
+        content: none;
+      }
       @media #{$desktop-s} {
         margin-top: 23px;
       }
@@ -177,7 +174,7 @@
     }
     @media #{$desktop-m} {
       bottom: 32px;
-      right: 20px;
+      right: 0px;
     }
   }
   /* tweak in open state */
